added postgresdb, routes,setup new

--- a/.env.sporty
+++ b/.env.sporty
@@ -4,8 +4,8 @@ BETVALUE=1
 MINODD=1.22
 MAXODD=1.43
 RESTARTINTERVAL=60000
-SPORTYACC=0543499645
-SPORTYPASS=Angusd3i@1
+SPORTYACC=0207598163
+SPORTYPASS=angusd3i@1
 SPORTYPASSVODA=angusd3i
 SPORTYPASSMTN=Angusd3i@1
 THREELINE_MINTIME=60
